--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="description" content="description">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
 	<!-- <link href="https://fonts.googleapis.com/css?family=Inter:regular,500,600,700" rel="stylesheet" /> -->
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
