--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,14 +1,10 @@
 <header data-scroll="80" class="header">
-	<div class="header__wrapper">
-		<div class="header__container">
-			<div class="header__body">
-
-			</div>
-			<div class="header__icon icon-menu">
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
+	<div class="header__search">
+		<form action="#">
+			<input type="text" placeholder="Поиск">
+		</form>
+	</div>
+	<div class="header__logo">
+		<img src="../img/icons/Logotype.svg" alt="logo">
 	</div>
 </header>
